--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
+<div class="container" unselectable="on">
    <svg class="bear" xmlns="http://www.w3.org/2000/svg" version="1" width="100%" height="100%" viewBox="0 0 200 200">
   <ellipse class="ear" cx="20%" cy="20%" rx="13.5%" ry="12.5%" style="fill:var(--base-color);stroke:;stroke-width:1;" />
   <ellipse class="" cx="20%" cy="20%" rx="10%" ry="9%" style="fill:var(--ear-color);stroke:;stroke-width:1;" />
