--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,13 @@
 <html>
 <head>
+<meta name=theme-color content=#f1f1f1>
+
+<meta name=application-name content="bear">
+<meta name=apple-mobile-web-app-title content="bear">
+
+<meta name=mobile-web-app-capable content=yes>
+<meta name=apple-mobile-web-app-capable content=yes>
+<meta name=apple-mobile-web-app-status-bar-style content=#f1f1f1>
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <link rel="stylesheet" href="style.css">
 </head>
