--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container" unselectable="on">
+<div class="container-bear" unselectable="on">
    <svg class="bear" xmlns="http://www.w3.org/2000/svg" version="1" width="100%" height="100%" viewBox="0 0 200 200">
   <ellipse class="ear" cx="20%" cy="20%" rx="13.5%" ry="12.5%" style="fill:var(--base-color);stroke:;stroke-width:1;" />
   <ellipse class="" cx="20%" cy="20%" rx="10%" ry="9%" style="fill:var(--ear-color);stroke:;stroke-width:1;" />
@@ -33,6 +33,70 @@
  
 </svg>
 </div>
+
+<div class="container-cat" unselectable="on">
+<svg class="cat" xmlns="http://www.w3.org/2000/svg" version="1" width="100%" height="100%" viewBox="0 0 200 200">
+  
+  <ellipse cx="100" cy="90" rx="85" ry="75" style="fill:var(--base-c-color);stroke:;stroke-width:1;"></ellipse>
+  <path class="line" d="M 20, 64 
+C 20,50 20, 20  25, 10
+C 33,8 44, 14  60, 25
+" style="stroke:; stroke-width:2; fill:var(--base-c-color);"></path>
+  <path class="line" d="M 180, 64 
+C 180,50 180, 20  175, 10
+C 167,8 156, 14  135, 25
+" style="stroke:; stroke-width:2; fill:var(--base-c-color);"></path>
+  
+  <path class="line" d="M 172, 50 
+C 175,50 175, 20  170, 20
+C 167,20 156, 20  150, 27
+" style="stroke:; stroke-width:2; fill:var(--ear-c-color);"></path>
+  
+  <path class="line" d="M 28, 50 
+C 25,50 25, 20  30, 20
+C 38,20 40, 20  50, 27
+" style="stroke:; stroke-width:2; fill:var(--ear-c-color);"></path>
+  
+  
+  
+  
+  <ellipse cx="100" cy="102" rx="10" ry="8" style="fill:black;stroke:;stroke-width:1;"></ellipse>
+  <path class="line" d="M 99, 109 
+C 105,112 85, 132  70, 112
+" style="stroke:black; stroke-width:2.5; fill:none;"></path>
+  <path class="line" d="M 101, 109 
+C 95,112 115, 132  130, 112
+" style="stroke:black; stroke-width:2.5; fill:none;"></path>
+  
+  <path class="line" d="M 100, 109
+C 100,110 100, 117  90, 120                     
+C 95,130 105, 130  110, 120
+C 100,117 100, 110  100, 109
+" style="stroke:black; stroke-width:2; fill:var(--mouth-c-color);"></path>
+  
+  
+  <rect x="35%" y="33.5%" width="6.5%" height="7.9%" rx="3.5%" fill="var(--eye-color)"></rect>
+  <rect x="58.2%" y="33.5%" width="6.5%" height="7.9%" rx="7" fill="var(--eye-color)"></rect>
+  
+  <line x1="62" y1="100" x2="35" y2="90" style="stroke:var(--mustache-color);stroke-width:2"></line>
+  <line x1="60" y1="107" x2="30" y2="105" style="stroke:var(--mustache-color);stroke-width:2"></line>
+  <line x1="62" y1="114" x2="35" y2="120" style="stroke:var(--mustache-color);stroke-width:2"></line>
+  
+  <line x1="138" y1="100" x2="165" y2="90" style="stroke:var(--mustache-color);stroke-width:2"></line>
+  <line x1="140" y1="107" x2="170" y2="105" style="stroke:var(--mustache-color);stroke-width:2"></line>
+  <line x1="138" y1="114" x2="165" y2="120" style="stroke:var(--mustache-color);stroke-width:2"></line>
+  
+ 
+</svg>
+</div>
+
+
+
+
+
+
+
+
 
 <svg class="sample" class="heart" xmlns="http://www.w3.org/2000/svg" version="1" width="200" height="200" viewBox="0 0 180 180">
   
