--- a/static/index.html
+++ b/static/index.html
@@ -98,7 +98,7 @@ C 100,117 100, 110  100, 109
 
 
 
-<svg class="sample" class="heart" xmlns="http://www.w3.org/2000/svg" version="1" width="200" height="200" viewBox="0 0 180 180">
+<svg class="sample" unselectable="on" class="heart" xmlns="http://www.w3.org/2000/svg" version="1" width="200" height="200" viewBox="0 0 180 180">
   
   <path class="line" d="M 30, 60 
 C 45, 30 75, 30 90, 60
