--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container-bear" unselectable="on">
+<div class="container-bear" unselectable="on" onmousedown="return false">
    <svg class="bear" xmlns="http://www.w3.org/2000/svg" version="1" width="100%" height="100%" viewBox="0 0 200 200">
   <ellipse class="ear" cx="20%" cy="20%" rx="13.5%" ry="12.5%" style="fill:var(--base-color);stroke:;stroke-width:1;" />
   <ellipse class="" cx="20%" cy="20%" rx="10%" ry="9%" style="fill:var(--ear-color);stroke:;stroke-width:1;" />
@@ -98,7 +98,7 @@ C 100,117 100, 110  100, 109
 
 
 
-<svg class="sample" unselectable="on" class="heart" xmlns="http://www.w3.org/2000/svg" version="1" width="200" height="200" viewBox="0 0 180 180">
+<svg class="sample" unselectable="on" onmousedown="return false" class="heart" xmlns="http://www.w3.org/2000/svg" version="1" width="200" height="200" viewBox="0 0 180 180">
   
   <path class="line" d="M 30, 60 
 C 45, 30 75, 30 90, 60
